--- a/ImCore/ImCore.csproj
+++ b/ImCore/ImCore.csproj
@@ -15,6 +15,7 @@
         <Title>$(AssemblyName)</Title>
         <IsPackable>true</IsPackable>
         <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+        <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
