--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -1,8 +1,12 @@
-﻿ {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "cfg": {
+    "redis": "127.0.0.1:6379,poolsize=200,perheat=5",
+    "servers": ["bilipush.1024dream.net:7777"]
+  }
 }
