--- a/web/web.csproj
+++ b/web/web.csproj
@@ -9,9 +9,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Include="appsettings.json">
-        <Generator>MSBuild:Compile</Generator>
-      </EmbeddedResource>
+      <None Include="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Generator></Generator>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
