Net监控对接尝试

--- a/imServer/appsettings.json
+++ b/imServer/appsettings.json
@@ -4,6 +4,20 @@
     "Servers": "127.0.0.1:6001",
     "Server": "127.0.0.1:6001"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "https://*:7000"
+      },
+      "Https": {
+        "Url": "https://*:7777",
+        "Certificate": {
+          "Path": "bilipush.pfx",
+          "Password": "bilipush"
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
