--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -1,4 +1,18 @@
 ﻿{
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5001"
+      },
+      "Https": {
+        "Url": "https://*:5000",
+        "Certificate": {
+          "Path": "bilipush.pfx",
+          "Password": "bilipush"
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -7,6 +21,6 @@
   "AllowedHosts": "*",
   "cfg": {
     "redis": "127.0.0.1:6379,poolsize=200,perheat=5",
-    "servers": ["bilipush.1024dream.net:7777"]
+    "servers": [ "bilipush.1024dream.net:7777" ]
   }
 }
