--- a/web/web.csproj
+++ b/web/web.csproj
@@ -13,20 +13,42 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         <Generator></Generator>
       </None>
+      <None Include="Config\Core.config" />
+      <None Include="Config\XCode.config" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="RestSharp" Version="106.6.10" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="4.0.1" />
         <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.1" />
+        <PackageReference Include="WorkQueue" Version="1.0.5" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\ImCore\ImCore.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="NewLife.Core">
+        <HintPath>..\..\..\NewLifeX\Bin\netstandard2.0\NewLife.Core.dll</HintPath>
+      </Reference>
+      <Reference Include="XCode">
+        <HintPath>..\..\..\NewLifeX\Bin\netstandard2.0\XCode.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="Config\Core.config">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Update="Config\XCode.config">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
