利用缓存 降压

--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -21,6 +21,6 @@
   "AllowedHosts": "*",
   "cfg": {
     "redis": "127.0.0.1:6379,poolsize=200,perheat=5",
-    "servers": [ "bilipush.1024dream.net:7777" ]
+    "servers": ["bilipush.1024dream.net:7777"],
   }
 }
