--- a/ImCore/ImCore.csproj
+++ b/ImCore/ImCore.csproj
@@ -1,40 +1,52 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
-        <Version>1.0.1</Version>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Authors>YeXiangQin</Authors>
-        <Description>.NETCore websocket 实现简易、高性能、集群即时通讯组件，支持点对点通讯、群聊通讯、上线下线事件消息等众多实用性功能.</Description>
-        <PackageProjectUrl>https://github.com/2881099/im</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/2881099/im</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageTags>im;websocket;signalr</PackageTags>
-        <PackageId>$(AssemblyName)</PackageId>
-        <Title>$(AssemblyName)</Title>
-        <IsPackable>true</IsPackable>
-        <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-        <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <Version>1.0.1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>YeXiangQin</Authors>
+    <Description>.NETCore websocket 实现简易、高性能、集群即时通讯组件，支持点对点通讯、群聊通讯、上线下线事件消息等众多实用性功能.</Description>
+    <PackageProjectUrl>https://github.com/2881099/im</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/2881099/im</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>im;websocket;signalr</PackageTags>
+    <PackageId>$(AssemblyName)</PackageId>
+    <Title>$(AssemblyName)</Title>
+    <IsPackable>true</IsPackable>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
+  </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DocumentationFile>ImCore.xml</DocumentationFile>
-        <WarningLevel>3</WarningLevel>
-    </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>ImCore.xml</DocumentationFile>
+    <WarningLevel>3</WarningLevel>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="CSRedisCore" Version="3.1.10" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-        <PackageReference Include="System.Memory" Version="4.5.3" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CSRedisCore" Version="3.1.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Memory" Version="4.5.3" />
+    <PackageReference Include="WorkQueue" Version="1.0.5" />
+  </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-        <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.7" />
-    </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.7" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <Reference Include="NewLife.Core">
+      <HintPath>..\..\..\NewLifeX\Bin\netstandard2.0\NewLife.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
-    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-        <DefineConstants>ns20;netstandard20</DefineConstants>
-    </PropertyGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+    <Reference Include="NewLife.Core">
+      <HintPath>..\..\..\NewLifeX\Bin\net45\NewLife.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <DefineConstants>ns20;netstandard20</DefineConstants>
+  </PropertyGroup>
 
 </Project>
