--- a/ImCore/ImCore.csproj
+++ b/ImCore/ImCore.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSRedisCore" Version="3.1.10" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
     <PackageReference Include="WorkQueue" Version="1.0.5" />
