--- a/imServer/imServer.csproj
+++ b/imServer/imServer.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\NewLifeX\X\NewLife.Core\NewLife.Core.csproj" />
     <ProjectReference Include="..\ImCore\ImCore.csproj" />
   </ItemGroup>
   <ItemGroup>
