调整监控核心逻辑

--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -20,7 +20,28 @@
   },
   "AllowedHosts": "*",
   "cfg": {
-    "redis": "127.0.0.1:6379,poolsize=200,perheat=5",
-    "servers": ["bilipush.1024dream.net:7777"],
+    "redis": "49.235.200.131:16379,poolsize=5,perheat=5",
+    "servers": [ "bilipush.1024dream.net:7777" ]
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "IpWhitelist": [ "127.0.0.1", "::1/10", "192.168.0.0/24" ],
+    "EndpointWhitelist": [],
+    "ClientWhitelist": [],
+    "QuotaExceededResponse": {
+      "Content": "{{ \"code\": -1, \"msg\": \"请求过于频繁，请稍后再试\", \"details\": \"Quota exceeded. Maximum allowed: {0} per {1}. Please try again in {2} second(s).\" }}",
+      "ContentType": "application/json"
+    },
+    "GeneralRules": [
+      {
+        "Endpoint": "*:/ws/pre-connect*",
+        "Period": "1m",
+        "Limit": 5
+      }
+    ]
   }
 }
