--- a/ImCore/ImCore.csproj
+++ b/ImCore/ImCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Version>1.0.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>YeXiangQin</Authors>
@@ -24,11 +24,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSRedisCore" Version="3.1.10" />
+    <PackageReference Include="CSRedisCore" Version="3.6.2" />
+    <PackageReference Include="FreeSql.All" Version="1.4.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
-    <PackageReference Include="WorkQueue" Version="1.0.5" />
+    <PackageReference Include="WorkQueue" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
@@ -38,11 +39,8 @@
     <Reference Include="NewLife.Core">
       <HintPath>..\..\..\NewLifeX\Bin\netstandard2.0\NewLife.Core.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
-    <Reference Include="NewLife.Core">
-      <HintPath>..\..\..\NewLifeX\Bin\net45\NewLife.Core.dll</HintPath>
+    <Reference Include="XCode">
+      <HintPath>..\..\..\NewLifeX\Bin\netstandard2.0\XCode.dll</HintPath>
     </Reference>
   </ItemGroup>
 
