--- a/web/web.csproj
+++ b/web/web.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="BiliAccount" Version="2.3.4.18" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="RestSharp" Version="106.6.10" />
     </ItemGroup>
@@ -25,8 +27,7 @@
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="4.0.1" />
-        <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.1" />
-        <PackageReference Include="WorkQueue" Version="1.0.5" />
+        <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
