web 和 server 优化，风暴独立化

--- a/web/Config/XCode.config
+++ b/web/Config/XCode.config
@@ -30,5 +30,5 @@
   <!--扩展属性过期。扩展属性Extends缓存，默认10秒-->
   <ExtendExpire>10</ExtendExpire>
   <!--反向工程。Off 关闭；ReadOnly 只读不执行；On 打开，仅新建；Full 完全，修改删除-->
-  <Migration>Full</Migration>
+  <Migration>Off</Migration>
 </Setting>
