--- a/ImCore/ImCore.csproj
+++ b/ImCore/ImCore.csproj
@@ -28,16 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSRedisCore" Version="3.6.2" />
-    <PackageReference Include="FreeSql.All" Version="1.4.0" />
+    <PackageReference Include="CSRedisCore" Version="3.6.5" />
+    <PackageReference Include="FreeSql" Version="1.6.0" />
+    <PackageReference Include="FreeSql.Provider.Sqlite" Version="1.6.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.2.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="System.Memory" Version="4.5.3" />
-    <PackageReference Include="WorkQueue" Version="1.3.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.7" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <Reference Include="NewLife.Core">
