--- a/web/web.csproj
+++ b/web/web.csproj
@@ -31,6 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\BiliAccount\BiliAccount.csproj" />
         <ProjectReference Include="..\ImCore\ImCore.csproj" />
     </ItemGroup>
 
